--- a/style.css
+++ b/style.css
@@ -27,14 +27,13 @@ html,body {
   
   #game-screen {
   max-width: 50em;
-  /* height: 70vh; */
   background-color: skyblue;
   margin: 0 auto;
   padding: 1em;
   display: grid;
   grid-gap: 1em;
-  grid-template-rows: .25fr .5fr .25fr;
-  grid-template-columns: .25fr .5fr .25fr;
+  grid-template-rows: .25fr .5fr;
+  grid-template-columns: .25fr .5fr;
   grid-template-areas: "top-left top-left top-right"
                         "game game game"
                         "btm-left btm-right btm-right";
@@ -59,11 +58,3 @@ html,body {
     grid-area: game;
   }
   
-  
-  #btm-left {
-    grid-area: btm-left;
-  }
-  
-  #btm-right {
-    grid-area: btm-right;
-  }
